--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-aiogram==2.25.1
-aiohttp==3.8.5
-motor==3.3.2
-pymongo==4.6.1
+aiogram==3.15.0
+aiohttp==3.10.10
+motor==3.6.0
+pymongo==4.10.1
+python-dotenv==1.0.1
+asyncio==3.4.3
