--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiogram==3.15.0
 aiohttp==3.10.10
 motor==3.6.0
-pymongo==4.10.1
+pymongo==4.9.2  # 4.9.2 က motor 3.6.0 နဲ့အဆင်ပြေတယ်
 python-dotenv==1.0.1
 asyncio==3.4.3
