--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-aiogram==3.15.0
-aiohttp==3.10.10
-motor==3.6.0
-pymongo==4.9.2  # 4.9.2 က motor 3.6.0 နဲ့အဆင်ပြေတယ်
-python-dotenv==1.0.1
-asyncio==3.4.3
+# Core
+python-telegram-bot==20.7
+
+# Optional
+python-dotenv==1.0.0  # For .env file
+aiofiles==23.2.1     # For async file operations
+requests==2.31.0     # For HTTP requests
